<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:textDirection="locale">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_img"
            android:theme="@style/MaterialAppTheme">


            <ImageView
                android:id="@+id/imgSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x20dp"
                android:layout_marginEnd="@dimen/x16dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x20dp"
                android:layout_marginEnd="@dimen/x16dp"
                android:contentDescription="@string/search"
                android:src="@android:drawable/stat_sys_download"
                app:layout_constraintEnd_toStartOf="@+id/imgSearch"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_regular"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgSearch"
                tools:text="9:12 Am" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x16dp"
                android:fontFamily="@font/sf_pro_regular"
                android:text="@string/celsius"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imgSearch"
                app:switchPadding="8dp" />

            <Button
                android:id="@+id/btnShowFavirouteCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x16dp"
                android:background="@drawable/cornered_gold_bg"
                android:padding="4dp"
                android:text="@string/show_faviroute_cities"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />


            <Button
                android:id="@+id/btnAddFavirouteCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/x16dp"
                android:background="@drawable/cornered_gold_bg"
                android:padding="4dp"
                android:text="@string/add_to_faviroute"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="visible" />


            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x60dp"
                android:fontFamily="@font/sf_pro_semibold"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTime"
                tools:text="San Francisco" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/tvCityName"
                app:layout_constraintStart_toStartOf="@+id/tvCityName"
                app:layout_constraintTop_toBottomOf="@+id/tvCityName">

                <TextView
                    android:id="@+id/tvTodayName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="Tuesday, " />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/white"

                    android:textSize="16sp"
                    tools:text="12 Apr 2022" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imgWeatherStatus"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_marginTop="@dimen/x50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


            <LinearLayout
                android:id="@+id/layoutTemperatureInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgWeatherStatus">

                <TextView
                    android:id="@+id/tvTemperatureNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_semibold"
                    android:textColor="@color/white"
                    android:textSize="56sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgTodayWeatherStatus"
                    tools:text="82.4" />

                <TextView
                    android:id="@+id/tvTemperatureDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_light"
                    android:text="@string/f"
                    android:textColor="@color/white_90_opacity"
                    android:textSize="56sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/tvTodayTemperatureNumber"
                    app:layout_constraintTop_toBottomOf="@+id/imgTodayWeatherStatus"
                    tools:visibility="visible" />

            </LinearLayout>


            <TextView
                android:id="@+id/tvWeatherStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_regular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutTemperatureInfo"
                tools:text="It\u00E2\u0080\u0099s a sunny day." />

            <LinearLayout
                android:id="@+id/layoutWindInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x16dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/layoutTemperatureInfo"
                app:layout_constraintTop_toBottomOf="@+id/tvWeatherStatus">

                <ImageView
                    android:id="@+id/imgWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_wind"
                    android:visibility="gone"
                    tools:visibility="visible" />


                <TextView
                    android:id="@+id/tvWindNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/x8dp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:gravity="center"
                    android:textColor="@color/white_90_opacity"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/tvTodayTempraterNumber"
                    app:layout_constraintTop_toBottomOf="@+id/imgTodayWeatherStatus"
                    tools:text="3" />


                <TextView
                    android:id="@+id/tvWindDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/x2dp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:gravity="center"
                    android:text="@string/mph"
                    android:textColor="@color/white_90_opacity"

                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/tvTodayTempraterNumber"
                    app:layout_constraintTop_toBottomOf="@+id/imgTodayWeatherStatus" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutHumidityInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/layoutTemperatureInfo"
                app:layout_constraintTop_toBottomOf="@+id/tvWeatherStatus">

                <ImageView
                    android:id="@+id/imgHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:src="@drawable/ic_humidity"
                    android:visibility="gone"
                    tools:visibility="visible" />


                <TextView
                    android:id="@+id/tvHumidityNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/x8dp"
                    android:fontFamily="@font/sf_pro_regular"
                    android:gravity="center"

                    android:textColor="@color/white_90_opacity"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/tvTodayTemperatureNumber"
                    app:layout_constraintTop_toBottomOf="@+id/imgTodayWeatherStatus"
                    tools:text="60" />


                <TextView
                    android:id="@+id/tvHumidityPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sf_pro_regular"
                    android:gravity="center"
                    android:text="@string/percent"
                    android:textColor="@color/white_90_opacity"
                    android:textSize="12sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@+id/tvTodayTemperatureNumber"
                    app:layout_constraintTop_toBottomOf="@+id/imgTodayWeatherStatus"
                    tools:visibility="gone" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWeatherDays"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/x20dp"
                android:layout_marginBottom="@dimen/x16dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_16sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/btnShowFavirouteCities"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutWindInfo"
                tools:itemCount="6"
                tools:listitem="@layout/item_day_weather" />

            <include
                android:id="@+id/searchDropDown"
                layout="@layout/layout_search_drop_down"
                tools:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>